<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
  <LinearLayout
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_marginTop="10dp"
      android:layout_marginStart="10dp"
      android:background="#FBFBFB"
      android:orientation="horizontal">

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center_vertical"
        android:layout_margin="15dp"
        android:onClick="backPress"
        android:src="@drawable/ic_back"
        app:tint="@color/app_color" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center_vertical"
        android:textColor="@color/black"

        android:text="@string/edit_profile"
        android:textSize="20dp" />

  </LinearLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/toolbar"
      android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="210dp"
        android:layout_height="210dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        app:cardCornerRadius="12dp"
        app:cardUseCompatPadding="true">

      <ImageView
          android:id="@+id/profile_pic"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:onClick="profile_image"
          android:scaleType="centerCrop"
          android:src="@drawable/defualt_image" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:fontFamily="@font/poppins_regular"

        android:hint="@string/name"
        android:layout_marginTop="40dp"
        android:textColor="@color/textColor"
        android:padding="12dp"

        android:textColorHint="@color/textColor"
        android:textSize="15dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"

        android:background="@drawable/edit_bg"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/full_name"
        android:padding="12dp"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        android:textSize="15dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/dob"
        android:padding="12dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        android:textSize="15dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/edit_bg"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/dob"
        android:padding="12dp"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        android:textSize="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/email"

        android:padding="12dp"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        android:textSize="15dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/edit_bg"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/email"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"

        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        android:textSize="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/phone_number"

        android:padding="12dp"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        android:textSize="15dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/edit_bg"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:padding="12dp"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        android:textSize="15dp" />
</LinearLayout>
  <Button
      android:layout_width="match_parent"
      android:layout_height="40dp"
      android:layout_marginLeft="25dp"
      android:layout_marginTop="20dp"
      android:layout_marginRight="25dp"
      android:background="@drawable/btn_bg"
      android:fontFamily="@font/poppins_regular"
      android:onClick="sign_up"
      android:text="Update"
      android:textColor="@color/white" />
</LinearLayout>
  </androidx.core.widget.NestedScrollView>